--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <p class="pan">DNM Company основанная в 2024 году, представляет собой фирму с полным спектром услуг, предлагающую создание на заказ сайтов, приложений, ботов и т.д. В целях рекламы и раскрутки не только малых бизнесов, но и крупных компаний.</p>
 
-                <button class="btn1">Узнать больше</button>
+                <a href="https://maksimdel068.wixstudio.io/my-site-1"><button class="btn1">Узнать больше</button></a>
             </div>  
         </section>
 
