--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DNM Company</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="img/icon3.ico">
+    <link rel="icon" type="image/x-icon" href="img/icon3.ico">
     <link href="https://fonts.cdnfonts.com/css/evensong" rel="stylesheet">
 </head>
 <body>
